--- a/style.css
+++ b/style.css
@@ -93,7 +93,7 @@ table {
 }
 .main{
    margin-top: 20%;
-   font-size: 20px;
+   font-size: 15px;
    color: white;
    font-family: 'PF Tempesta Seven', sans-serif;
 }
@@ -141,3 +141,62 @@ table {
    width: 400px;
    display: inline-block;
 }
+.show-modal-window {
+   margin-left: 2%;
+   font-family: '8BIT WONDER', sans-serif;
+   font-size: 10px;
+   font-weight: 100;
+   padding: 10px 20px;
+   border: none;
+   background-color: white;
+   color: black;
+   border-radius: none;
+   cursor: pointer;
+ }
+ 
+ .close-modal-window {
+   position: absolute;
+   top: 1.2rem;
+   right: 2rem;
+   font-size: 5rem;
+   color: #444;
+   cursor: pointer;
+   border: none;
+   background: none;
+ }
+ 
+ h1 {
+   font-family: 'PF Tempesta Seven', sans-serif;
+   font-size: 2.5rem;
+   margin-bottom: 2rem;
+ }
+ 
+ /* Classes for modal windows functionality */
+ .hidden {
+   display: none;
+ }
+ 
+ .modal-window {
+   position: absolute;
+   top: 50%;
+   left: 50%;
+   transform: translate(-50%, -50%);
+   width: 70%;
+   font-family: 'PF Tempesta Seven', sans-serif;
+   background-color: #fff;
+   padding: 6rem;
+   border-radius: 5px;
+   box-shadow: 0 3rem 5rem rgba(0, 0, 0, 0.3);
+   z-index: 10;
+ }
+ .overlay {
+   position: absolute;
+   top: 0;
+   left: 0;
+   width: 100%;
+   height: 100%;
+   background-color: rgba(0, 0, 0, 0.5);
+   backdrop-filter: blur(3px);
+   z-index: 5;
+ }
+ 
